# StockDory

./: .gitignore  .gitmodules  BinaryResource.cmake  CMakeLists.txt  DownloadCPM.cmake  EmbedFile.cmake  Engine.h  Evaluation.h  FetchDependencies.cmake  Information.cmake  Makefile  README.md  SimplifiedMoveList.h  m1_innerspeedupgraphs.py  m1_sequentialspeedupgraphs.py  m1_speedupgraphs.py  m2_innerspeedupgraphs.py  m2_sequentialspeedupgraphs.py  m2_speedupgraphs.py  m3_speedupgraphs.py  m4.cpp  main.cpp  nestedm1_speedupgraphs.py  nestedm2_speedupgraphs.py  play-bot.cpp  pyproject.toml  test.py
.github/workflows/: cmake.yml  code_review.yml  executable.yml  py_binding.yml  pypi_publish.yml
.readme/: Grana.excalidraw
Backend/: Board.h
Backend/Move/: AttackTable.h  BlackMagicFactory.h  UtilityTable.h
Backend/Type/: Move.h  PreviousState.h
src/: main.cpp  python_binding.cpp
src/Backend/: Board.h  Information.h  Misc.h  ThreadPool.h  TranspositionTable.h  Util.h
src/Backend/Move/: AttackTable.h  BlackMagicFactory.h  MoveList.h  RayTable.h  TableSetup.h  UtilityTable.h
src/Backend/Template/: MoveType.h
src/Backend/Type/: BitBoard.h  CheckBitBoard.h  Color.h  Move.h  Piece.h  PieceColor.h  PinBitBoard.h  PreviousState.h  Square.h  Zobrist.h
src/Backend2/: Base.h  BitBoard.h  Board.h  Move.h  MoveList.h  Piece.h  PieceType.h  Position.h  PositionInfo.h  PositionProperty.h  Side.h  Square.h
src/Backend2/Primitive/: Base.h  BitBoard.h  Move.h  Piece.h  PieceType.h  PositionProperty.h  Side.h  Square.h  Zobrist.h
src/Data/: Grana.md  README.md
src/Data/Format/: Grain.h  GranaVersion.h
src/Data/Type/: PackedPosition.h  Result.h  Seed.h  Stalk.h
src/Engine/: Common.h  EngineEntry.h  EngineParameter.h  Evaluation.h  LogarithmicReductionTable.h  NetworkArchitecture.h  OrderedMoveList.h  Policy.h  RepetitionHistory.h  SEE.h  Search.h  Search2.h  SearchState.h  TimeControl.h  TranspositionTable.h  TunableParameter.h  WDL.h
src/Engine/Model/: Aurora-24de239dff.nnue  Aurora-334ab2818f.nnue  Aurora-3c7fb45eb1.nnue  Aurora-3f988313c3.nnue  Aurora-5b3145691f.nnue  Aurora-855bc8d7cb.nnue  Aurora-cf410c2896.nnue  Aurora-d74b8ea8bc.nnue  Aurora-db1a66b638.nnue
src/Engine/Move/: HistoryTable.h  KillerTable.h  OrderedMoveList.h  OrderedMoveList2.h  Policy.h  Policy2.h  PrincipleVariationTable.h
src/Engine/Time/: TimeControl.h  TimeManager.h
src/Python/: binding.cpp
src/Statistical/: UniquePositionCounter.h
src/Terminal/: BenchHash.h  NetworkConverter.h  main.cpp
src/Terminal/Perft/: PerftEntry.h  PerftRunner.h
src/Terminal/UCI/: UCIInterface.h  UCIOption.h  UCISearch.h  UCISearchEventHandler.h  UCISearchThread.h  UCITime.h
src/Terminal/UI/: ScreenManager.h
