[build-system]
requires = [
    "scikit-build-core>=0.10.0",
    "pybind11"
]
build-backend = "scikit_build_core.build"

[project]
name = "StockDory"
version = "0.1+0"
description = "Python Bindings for StockDory"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
authors = [
    { name = "StockDory Authors" }
]
keywords = [ "chess", "engine", "nnue" ]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Microsoft :: Windows",
]

[tool.scikit-build]
build.verbose = true
cmake.args = ["-G", "Ninja"]
cmake.define = { "CMAKE_BUILD_TYPE" = "Release", "PYMODULE" = "ON" }

wheel.install-dir = ""
